Player: - Can walk - Can jump - Can be stopped
Game:
- Can be paused
- Can return to game
- Included music
- Included sound when jump

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Ll]ibrary/
+[Tt]emp/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
