Created some features: - Included audio sources for many moves like game theme, game over, pause, win, hit, get coins and get hurt; - Included behavior for swimming - Included a key to open the treasure - When you have a key, then you can open the treasure and finish the scene

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,8 +61,10 @@
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\Coin.cs" />
      <Compile Include="Assets\Scripts\GameCore.cs" />
+     <Compile Include="Assets\Scripts\Key.cs" />
      <Compile Include="Assets\Scripts\MovementBehavior.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Treasure.cs" />
  <Reference Include="UnityEngine">
  <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
